erDiagram

    profile {
        BIGINT id PK
        TEXT nickname UK
        TEXT email UK
        TEXT phone_number UK
        TEXT profile_name
        TEXT surname
        TEXT patronymic
        gender_enum gender
        DATE birthday
        TEXT bio
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
        TIMESTAMPTZ deleted_at
        TEXT password_hash
        TEXT password_salt
    }

    community {
        BIGINT id PK
        TEXT community_name UK
        TEXT bio
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
        TIMESTAMPTZ deleted_at
    }

    post {
        BIGINT id PK
        TEXT post_text
        BIGINT author_profile_id FK
        BIGINT author_community_id FK
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
        TIMESTAMPTZ deleted_at
    }

    media {
        BIGINT id PK
        TEXT media_path "S3_PATH"
        TEXT description
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
        TIMESTAMPTZ deleted_at
    }

    post_media {
        BIGINT post_id PK, FK
        BIGINT media_id PK, FK
        TIMESTAMPTZ created_at
        TIMESTAMPTZ deleted_at
    }

    profile_repost {
        BIGINT profile_id PK, FK
        BIGINT post_id PK, FK
        TEXT repost_comment
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
        TIMESTAMPTZ deleted_at
    }

    profile_like {
        BIGINT id PK
        BIGINT profile_id FK
        BIGINT post_id FK
        TIMESTAMPTZ created_at
        TIMESTAMPTZ deleted_at
    }

    chat {
        BIGINT id PK
        TIMESTAMPTZ created_at
    }

    chat_profile {
        BIGINT profile_id PK, FK
        BIGINT chat_id PK, FK
        TIMESTAMPTZ deleted_at
    }

    message {
        BIGINT id PK
        BIGINT chat_id FK
        TEXT message_text
        BIGINT author_id FK
        TIMESTAMPTZ created_at
        TIMESTAMPTZ deleted_at
        TIMESTAMPTZ updated_at
        BIGINT repost_from FK
        BIGINT reply_from FK
    }

    message_media {
        BIGINT message_id PK, FK
        BIGINT media_id PK, FK
    }

    profile_relationship {
        BIGINT profile_id_master PK, FK
        BIGINT profile_id_slave PK, FK
        relationships_enum status
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
        TIMESTAMPTZ deleted_at
    }

    community_member {
        BIGINT profile_id PK, FK
        BIGINT community_id PK, FK
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
        TIMESTAMPTZ deleted_at
        role_enum role
    }

    emoji_reaction {
        BIGINT id PK
        TEXT emoji_path "S3_PATH"
        TEXT description
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
        TIMESTAMPTZ deleted_at
    }

    message_like {
        BIGINT id PK
        BIGINT message_id FK
        BIGINT like_by FK
        BIGINT emoji_id FK
        TIMESTAMPTZ created_at
        TIMESTAMPTZ deleted_at
    }

    comment {
        BIGINT id PK
        BIGINT post_id FK
        TEXT comment_text
        BIGINT author_id FK
        TIMESTAMPTZ created_at
        TIMESTAMPTZ deleted_at
        TIMESTAMPTZ updated_at
        BIGINT repost_from FK
        BIGINT reply_from FK
    }

    comment_like {
        BIGINT id PK
        BIGINT comment_id FK
        BIGINT like_by FK
        BIGINT emoji_id FK
        TIMESTAMPTZ created_at
        TIMESTAMPTZ deleted_at
    }

    comment_media {
        BIGINT comment_id PK, FK
        BIGINT media_id PK, FK
    }

    sticker {
        BIGINT id PK
        TEXT sticker_path "S3_PATH"
        BIGINT sticker_pack
        TEXT description
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
        TIMESTAMPTZ deleted_at
    }

    message_sticker {
        BIGINT message_id PK, FK
        BIGINT sticker_id PK, FK
    }

    comment_sticker {
        BIGINT comment_id PK, FK
        BIGINT sticker_id PK, FK
    }

    profile_avatar {
        BIGINT profile_id PK, FK
        BIGINT media_id PK, FK
        TIMESTAMPTZ created_at
        TIMESTAMPTZ deleted_at
    }

    profile |o--o{ post : "authors (or community)"
    profile ||--o{ profile_repost : "reposts"
    profile ||--o{ profile_like : "likes"

    profile ||--o{ chat_profile : "participates"
    chat ||--o{ chat_profile : "contains"

    profile ||--o{ message : "writes"
    profile ||--o{ comment : "writes"

    profile ||--o{ profile_relationship : "master"
    profile ||--o{ profile_relationship : "slave"

    profile ||--o{ community_member : "joins"
    community ||--o{ community_member : "members"

    profile ||--o{ message_like : "likes messages"
    profile ||--o{ comment_like : "likes comments"

    profile ||--o{ profile_avatar : "avatars"

    community |o--o{ post : "authors (or profile)"

    post ||--o{ post_media : "media"
    media ||--o{ post_media : "attached to posts"

    post ||--o{ profile_repost : "reposted"
    post ||--o{ profile_like : "liked"

    post ||--o{ comment : "comments"

    chat ||--o{ message : "contains"

    message ||--o{ message_media : "media"
    media ||--o{ message_media : "attached to messages"

    message ||--o{ message_like : "likes"
    emoji_reaction ||--o{ message_like : "used in"

    message ||--o{ message_sticker : "stickers"
    sticker ||--o{ message_sticker : "used in messages"

    message |o--o{ message : "repost"
    message |o--o{ message : "reply"

    comment ||--o{ comment_like : "likes"
    emoji_reaction ||--o{ comment_like : "used in"

    comment ||--o{ comment_media : "media"
    media ||--o{ comment_media : "attached to comments"

    comment ||--o{ comment_sticker : "stickers"
    sticker ||--o{ comment_sticker : "used in comments"

    comment |o--o{ comment : "repost"
    comment |o--o{ comment : "reply"

    media ||--o{ profile_avatar : "used as avatar"

    role_enum {
        ENUM admin
        ENUM moderator
        ENUM owner
        ENUM member
    }

    relationships_enum {
        ENUM friendship
        ENUM blocked
        ENUM friend_request
    }

    gender_enum {
        ENUM male
        ENUM female
        ENUM other
    }